fix images visibility on sides v2

--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ a {
 
   opacity: 0;
   animation: fadePattern 2000ms cubic-bezier(0.5, 0, 0, 1) forwards;
+
+  z-index: 0;
 }
 
 @keyframes fadePattern {
@@ -261,7 +263,9 @@ a {
 .wrapper-container-details {
   height: 100%;
   min-height: 320px;
+  width: 100%;
   display: flex;
+  align-items: center;
   justify-content: center;
 
   position: relative; /* for animation of images on load */
@@ -270,10 +274,17 @@ a {
 .container-details {
   min-width: 1720px;
   width: 100%;
+  height: 100%;
 
   display: flex;
   justify-content: space-between;
   gap: 64px;
+}
+
+@media (min-width: 2000px) {
+  .container-details {
+    height: 80%;
+  }
 }
 
 .detail-item {
@@ -486,6 +497,11 @@ a {
 
 /* animation on load */
 .wrapper-hero-bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: fit-content;
+
   overflow: hidden;
   min-height: 160px;
 }
